fix:align

--- a/wp-content/themes/brand-h/css/sunset.css
+++ b/wp-content/themes/brand-h/css/sunset.css
@@ -1402,6 +1402,11 @@ transform: translateY(-8px);
   margin-left:12px!important;
 }
 
+.rtl .arabic-style-pr4{
+  padding-right:0px!important;
+  padding-left:4px!important;
+}
+
 @media only screen and (max-width:500px) {
   .chartTrigCont button {width: 14em!important;
   height: 14em!important;
